Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBooleanBoolObjField.quorum
class Main
    boolean v = Test()
    action Main
    end

    action Test() returns boolean
        Boolean var
        var:SetValue(true)
        return var
    end
end